# LegacyCore_6.x.x

./: .travis.yml  CMakeLists.txt  FETCH_HEAD  README.md  config  revision_data.h.in.cmake
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: ConfigureScripts.cmake
contrib/: world_updates.sql
dep/: CMakeLists.txt  PackageList.txt
dep/efsw/: CMakeLists.txt
dep/gsoap/: soapServer.cpp
refs/remotes/LegacyCore_6.x.x/: master
sql/base/dev/: world_database.sql
sql/create/: create_mysql.sql  drop_mysql.sql
sql/updates/world/: 2015_12_02_fix_crush_northshire.txt
src/common/: CMakeLists.txt  Common.cpp  Common.h  Define.h  GitRevision.cpp  GitRevision.h
src/common/Collision/: BoundingIntervalHierarchy.h  DynamicTree.h  RegularGrid.h  VMapTools.h
src/common/Collision/Management/: IVMapManager.h  MMapFactory.h  MMapManager.h  VMapFactory.h  VMapManager2.h
src/common/Collision/Maps/: MapTree.h  TileAssembler.h
src/common/Collision/Models/: GameObjectModel.h  ModelInstance.h  WorldModel.h
src/common/Configuration/: Config.cpp  Config.h
src/common/Cryptography/: ARC4.h  BigNumber.h  HmacHash.cpp  HmacHash.h  OpenSSLCrypto.h  SHA1.h  SHA256.h
src/common/Cryptography/Authentication/: PacketCrypt.h  WorldPacketCrypt.h
src/common/Debugging/: Errors.h
src/common/Logging/: Appender.h  AppenderConsole.h  AppenderFile.h  Log.cpp  Log.h  LogOperation.h  Logger.h
src/common/Platform/: ServiceWin32.cpp  ServiceWin32.h
src/common/Utilities/: EventMap.h  EventProcessor.h  TaskScheduler.h  Util.h
src/server/: CMakeLists.txt
src/server/bnetserver/: CMakeLists.txt  Main.cpp  bnetserver.conf.dist  bnetserver.rc
src/server/bnetserver/Packets/: PacketManager.cpp  PacketManager.h
src/server/bnetserver/Realms/: RealmList.cpp  RealmList.h
src/server/bnetserver/Server/: ComponentManager.cpp  ComponentManager.h  ModuleManager.cpp  ModuleManager.h  SessionManager.cpp  SessionManager.h
src/server/database/: CMakeLists.txt
src/server/database/Database/: AdhocStatement.h  DatabaseEnv.cpp  DatabaseEnv.h  DatabaseLoader.cpp  DatabaseLoader.h  DatabaseWorker.h  Field.h  MySQLConnection.h  MySQLThreading.h  PreparedStatement.h  QueryHolder.h  QueryResult.h  SQLOperation.h  Transaction.h
src/server/database/Logging/: AppenderDB.h
src/server/database/Updater/: DBUpdater.cpp  DBUpdater.h  UpdateFetcher.h
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAI.h  CreatureAISelector.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h  BattlenetAccountMgr.h  RBAC.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseBotBuyer.h  AuctionHouseBotSeller.h
src/server/game/Battlefield/: Battlefield.h  BattlefieldMgr.cpp  BattlefieldMgr.h
src/server/game/Battlegrounds/: Arena.h  ArenaScore.h  ArenaTeam.h  ArenaTeamMgr.cpp  ArenaTeamMgr.h  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.h
src/server/game/Calendar/: CalendarMgr.cpp  CalendarMgr.h
src/server/game/Chat/: Chat.cpp  Chat.h  ChatLink.h
src/server/game/Combat/: HostileRefManager.h  ThreatManager.h  UnitEvents.h
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h  DisableMgr.h
src/server/game/DataStores/: DB2Stores.cpp  DB2Stores.h  DBCStores.h
src/server/game/DungeonFinding/: LFG.h  LFGGroupData.h  LFGMgr.cpp  LFGMgr.h  LFGPlayerData.h  LFGQueue.h  LFGScripts.cpp  LFGScripts.h
src/server/game/Events/: GameEventMgr.cpp  GameEventMgr.h
src/server/game/Garrison/: Garrison.h  GarrisonMap.h  GarrisonMgr.cpp  GarrisonMgr.h
src/server/game/Globals/: ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/: GridStates.h  ObjectGridLoader.h
src/server/game/Groups/: Group.h  GroupMgr.cpp  GroupMgr.h  GroupReference.h
src/server/game/Guilds/: Guild.h  GuildFinderMgr.cpp  GuildFinderMgr.h  GuildMgr.cpp  GuildMgr.h
src/server/game/Instances/: InstanceSaveMgr.cpp  InstanceSaveMgr.h  InstanceScript.cpp  InstanceScript.h
src/server/game/Loot/: LootMgr.cpp  LootMgr.h
src/server/game/Mails/: Mail.h
src/server/game/Maps/: Map.cpp  Map.h  MapInstanced.h  MapManager.cpp  MapManager.h  MapUpdater.h  TransportMgr.cpp  TransportMgr.h
src/server/game/Movement/: MotionMaster.h  MovementGenerator.h  PathGenerator.h
src/server/game/OutdoorPvP/: OutdoorPvP.h  OutdoorPvPMgr.cpp  OutdoorPvPMgr.h
src/server/game/Pools/: PoolMgr.cpp  PoolMgr.h
src/server/game/Quests/: QuestDef.h
src/server/game/Reputation/: ReputationMgr.h
src/server/game/Scripting/: ScriptMgr.cpp  (+5 more)
src/server/ipc/: CMakeLists.txt  Commands.h  ZMQTask.h  ZmqContext.cpp  ZmqContext.h  ZmqListener.h  ZmqMux.h  ZmqWorker.h
src/server/scripts/: CMakeLists.txt  ScriptLoader.cpp.in.cmake
src/server/scripts/Commands/: cs_reload.cpp  cs_script_loader.cpp
src/server/scripts/Custom/: custom_script_loader.cpp
src/server/scripts/EasternKingdoms/: eastern_kingdoms_script_loader.cpp
src/server/scripts/Events/: events_script_loader.cpp
src/server/scripts/Kalimdor/: kalimdor_script_loader.cpp
src/server/scripts/Maelstrom/: CMakeLists.txt  maelstrom_script_loader.cpp
src/server/scripts/Northrend/: northrend_script_loader.cpp
src/server/scripts/OutdoorPvP/: OutdoorPvPScriptLoader.cpp
src/server/scripts/Outland/: outland_script_loader.cpp
src/server/scripts/Pandaria/: CMakeLists.txt
src/server/scripts/Pandaria/WanderingIsland/: WanderingIsland_South.cpp
src/server/scripts/Pandaria/Zones/WanderingIsland/: WanderingIsland_South.cpp
src/server/scripts/Pet/: pet_script_loader.cpp
src/server/scripts/Spells/: spell_script_loader.cpp
src/server/scripts/World/: CMakeLists.txt  world_script_loader.cpp
src/server/shared/: CMakeLists.txt  Containers.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  worldserver.conf.dist  worldserver.rc
(+116 files in other folders)
